# Maerthan-Arcane-Editor

./: CMakeLists.txt
apps/: main.cpp
include/: editor.h  element.h  modifier.h  modifierWidget.h
src/: editor.cpp  element.cpp  modifier.cpp  modifierWidget.cpp
ui/: editor.qrc  editor.ui  modifierWidget.qrc  modifierWidget.ui
